fixed bloody bottom scrollbar poping up

--- a/pages/static/css/messages.css
+++ b/pages/static/css/messages.css
@@ -55,6 +55,7 @@
 
 .bottom-bar {
     height: 40px;
+    max-width: fit-content;
 }
 
 .main {
