--- a/pages/static/css/style.css
+++ b/pages/static/css/style.css
@@ -19,6 +19,7 @@ body {
     scrollbar-width: none;
     box-sizing: border-box;
     margin: 0;
+    max-width: 100vw;
     background-color: #ffffff;
     color: #000000;
     /*min-width:750px;*/
